fix: terms-cloud line height overflow bug

--- a/assets/scss/components/terms-cloud.scss
+++ b/assets/scss/components/terms-cloud.scss
@@ -8,5 +8,5 @@
 .term-item {
   @include list-link-item;
   margin-right: 0.375rem;
-  line-height: 1rem;
+  line-height: 1.1;
 }
